@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction



class CollaboratorRepository {
    -collaborators : List<Collaborator>
    +getCollaborators()

}

class SkillRepository {
    +getSkill()
    -skills : List<Skill>
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    +getSkillRepository()
    +getCollaboratorRepository()
}

class AssignSkillController {
    +getCollaboratorRepository()
    +getSkillRepository()
    -CollaboratorRepository
    -SkillsRepository

}



class AssignSkillUI {
}
class Skill{
    +Skill(String Skill)
}
class Collaborator{
    +Collaborator(String name, String address, String email, String phoneNumber, String idType,
                                          String idNumber, LocalDate birthDate, LocalDate admissionDate, String job)
    -name : String
    -address : String
    -email : String
    -phoneNumber : String
    -idType : String
    -idNumber : String
    -birthDate : LocalDate
    -admissionDate : LocalDate
    -job : String
    -skills : List<Skill>
    +setSkills(List<Skill> skills)
}

AssignSkillUI .> AssignSkillController
AssignSkillController ..> Repositories : repositories
Repositories -->"1" SkillRepository
Repositories -->"1" CollaboratorRepository
SkillRepository "1"-->"1*" Skill
CollaboratorRepository "1"-->"1" Collaborator
Repositories -> Repositories : instance
AssignSkillController ..> SkillRepository  : skillRepository
AssignSkillController ..> CollaboratorRepository : collaboratorRepository


@enduml